[package]
name = "rust-sasa"
version = "0.3.4"
edition = "2024"
description = "RustSASA is a Rust library for computing the absolute solvent accessible surface area (ASA/SASA) of each atom in a given protein structure using the Shrake-Rupley algorithm."
readme = "README.md"
repository = "https://github.com/maxall41/RustSASA"
license = "MIT"
categories = ["science"]
keywords = ["Rust", "Bioinformatics", "SASA"]
documentation = "https://docs.rs/rust-sasa/latest/rust_sasa/"
rust-version = "1.85.0"

[dependencies]
pdbtbx = { path = "pdbtbx", version = "0.12.0" }             # We have to use a git module because you cannot use a git+rev version in a published crate for some reason...
nalgebra = "0.33.2"
rayon = "1.11.0"
snafu = "0.8.8"
clap = { version = "4.5.46", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.143"
quick-xml = { version = "0.38.3", features = ["serialize"] }
indicatif = "0.18.0"
mimalloc = { version = "0.1.48", default-features = false }

[dev-dependencies]
approx = "0.5.1"
