[package]
name = "rust-sasa"
version = "0.7.0"
edition = "2024"
description = "RustSASA is a Rust library for computing the absolute solvent accessible surface area (ASA/SASA) of each atom in a given protein structure using the Shrake-Rupley algorithm."
readme = "README.md"
repository = "https://github.com/maxall41/RustSASA"
license = "MIT"
categories = ["science"]
keywords = ["Rust", "Bioinformatics", "SASA"]
documentation = "https://docs.rs/rust-sasa/latest/rust_sasa/"
rust-version = "1.85.0"
exclude = [
    "paper/"
]

[dependencies]
pdbtbx = { git = "https://github.com/douweschulte/pdbtbx.git", rev = "332d29a232755e28c20d12929f9fea72be958e4c" }
nalgebra = "0.33.2"
rayon = "1.11.0"
snafu = "0.8.9"
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
quick-xml = { version = "0.38.4", features = ["serialize"] }
indicatif = "0.18.3"
mimalloc = { version = "0.1.48", default-features = false }
pulp = "0.22.2"
fnv = "1.0.3"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5"

[[bench]]
name = "sasa_benchmarks"
harness = false
