[package]
name = "rust-sasa"
version = "0.9.0"
edition = "2024"
description = "RustSASA is a Rust library for computing the absolute solvent accessible surface area (ASA/SASA) of each atom in a given protein structure using the Shrake-Rupley algorithm."
readme = "README.md"
repository = "https://github.com/maxall41/RustSASA"
license = "MIT"
categories = ["science"]
keywords = ["Rust", "Bioinformatics", "SASA"]
documentation = "https://docs.rs/rust-sasa/latest/rust_sasa/"
rust-version = "1.85.0"
exclude = [
    "paper/",
    "tests/data"
]

[dependencies]
pdbtbx = { path = "pdbtbx", version = "0.12.0" } # Git module required because git+rev is disallowed in published crates.
rayon = "1.11.0"
snafu = "0.8.9"
pulp = "0.22.2"
fnv = "1.0.3"
clap = { version = "4.5.53", features = ["derive"], optional = true }
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.146", optional = true }
quick-xml = { version = "0.38.4", features = ["serialize"], optional = true }
indicatif = { version = "0.18.3", optional = true }
mimalloc = { version = "0.1.48", default-features = false, optional = true }

[features]
default = []
cli = ["dep:clap", "dep:indicatif", "dep:mimalloc", "serde_json", "quick-xml", "serde"]

[[bin]]
name = "rust-sasa"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
approx = "0.5.1"
criterion = "0.7.0"
assert_cmd = "2.0.14"
escargot = "0.5.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
rust-sasa = { path = ".", features = ["cli"] } # Needed for integration tests

[[bench]]
name = "sasa_benchmarks"
harness = false
